Added profile photo to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bruno Martinez
-# logo: /path_to_img
+logo: /assets/img/pp.png
 # description: text below image
 # show_downloads: true
 theme: jekyll-theme-minimal
